Redirects stderr into stdout in exec calls
We use the new ProcessBuilder#redirectErrorStream to redirect the stderr output into the stdout. This way, we only need to read a single stream.

Fixes: OX-8549